# -

./: .gitignore  CMakeLists.txt  README.md  README.txt  设计说明书.docx
Classes/: AppDelegate.cpp  AppDelegate.h  MainScene.cpp  MainScene.h
Classes/Models/: Card.cpp  Card.h  GameState.cpp  GameState.h
Classes/Views/: CardView.cpp  CardView.h
proj.win32/: main.cpp  main.h
tools/: build_win32.ps1  setup_cocos2dx_3_17.ps1
